--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,6 @@
       <version>2.3</version>
     </dependency>   
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-    </dependency>
-    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
@@ -74,5 +69,10 @@
       <artifactId>htmlunit</artifactId>
       <version>2.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>1.6.1</version>
+    </dependency>    
   </dependencies>
 </project>
