--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ru.connect2me.util.hh</groupId>
+  <groupId>ru.connect2me.util.hh.parser</groupId>
   <artifactId>ParserHtmlHhResumeToInhouseXml</artifactId>
-  <version>1.6.6</version>
+  <version>1.6.8</version>
   <packaging>jar</packaging>
 
   <name>ParserHtmlHhResumeToInhouseXml</name>
